# memo-bot

./: .editorconfig  .env.template  .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
backend/: .env.template  Dockerfile  alembic.ini  app.py  config.py  conftest.py  pyproject.toml
backend/core/: exceptions.py  tests.py
backend/core/postgres/: __init__.py  base.py
backend/core/redis/: __init__.py
backend/healthcheck/: routes.py
backend/healthcheck/tests/: test_routes.py
backend/migrations/: env.py
backend/migrations/versions/: 2023-12-26_16-38_a35833d7d25e.py  2023-12-26_18-00_154a76a60997.py  2023-12-30_13-38_00797983a8a0.py  2024-01-02_23-29_936ff13c5b86.py  2024-01-08_15-30_65045282678b.py  2024-01-09_15-42_07257f24bc76.py  2024-01-10_13-03_5463601602ad.py
backend/note/: dependencies.py  exceptions.py  models.py  routes.py  schemas.py
backend/user/: dependencies.py  exceptions.py  models.py  one_time_code_repository.py  routes.py  schemas.py  services.py
backend/user/note/: dependencies.py  exceptions.py  models.py  routes.py  schemas.py
backend/user/tests/: factories.py  test_routes.py
discord/: .gitignore  Dockerfile  __init__.py  __main__.py  config.py  pyproject.toml
telegram/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  __main__.py  config.py  pyproject.toml
telegram/bot/: bot.py  bot_info.py  dispatcher.py  log.py
telegram/filters/: role_filters.py
telegram/handlers/: base.py
telegram/keyboards/: inline.py  menu.py
telegram/middlewares/: BackendApiExcMiddleware.py  UserMiddleware.py  UserMiddlware.py  update_to_tg_id.py
telegram/utils/: root_dir.py
(+35 files in other folders)
