[tool.poetry]
name = "memo-bot"
version = "0.1.0"
description = ""
authors = ["DemonInMyHead <emworkac999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
aiogram = "^3.1.0"
pydantic = {extras = ["dotenv"], version = "^2.3.0"}
pydantic-settings = "^2.0.3"
pytest = "^7.4.2"
httpx = "^0.25.0"
pytest-lambda = "^2.2.0"
pytest-mock = "^3.11.1"
freezegun = "^1.2.2"
factory-boy = "^3.3.0"
python-multipart = "^0.0.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.21"}
asyncpg = "^0.28.0"
async-factory-boy = "^1.0.1"
pytz = "^2023.3.post1"
passlib = "^1.7.4"
cryptography = "^41.0.4"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
pytest-asyncio = "^0.21.1"
alembic = "^1.12.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
