[tool.poetry]
name = "discord"
version = "0.1.0"
description = ""
authors = ["huscker <egostalker03@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
disnake = "^2.9.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
