[tool.poetry]
name = "telegram"
version = "0.1.0"
description = ""
authors = ["Demon076 <dmrt076@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
httpx = "^0.26.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
